u spelled my name wrong fool!

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -40,7 +40,7 @@
 					<h1>WebSockets</h1>
 					<h3>Two-way realtime communication on the web</h3>
 					<p>
-						<small>Created by <a href="https://colincampbell.me">Colin Campbell</a> &amp; <a href="http://www.jordancaudill.com">Jodan Caudill</a></small>
+						<small>Created by <a href="https://colincampbell.me">Colin Campbell</a> &amp; <a href="http://www.jordancaudill.com">Jordan Caudill</a></small>
 					</p>
 				</section>
 
