Add first slides

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>WebSockets</title>
 </head>
 <body>
-  <a href="/site/research-brief/">View the Research Brief</a>
-  <a href="/site/presentation/">View the presentation</a>
+  <a href="research-brief/">View the Research Brief</a>
+  <a href="presentation/">View the presentation</a>
 </body>
 </html>
