Add presentation notes

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -54,7 +54,7 @@
           <p><small>Team messaging app</small></p>
 
           <aside class="notes">
-            Notes
+            These applications, especially Google Docs, wouldn't be possible without sockets because of the latency caused by the overhead of creating multiple requests.
           </aside>
         </section>
 
@@ -66,7 +66,7 @@
           <img data-src="img/websocket-rest-payload-comparison.png">
 
           <aside class="notes">
-            Notes
+            This example shows that although sockets are only just faster than XHR, sockets are significantly better at scale.
           </aside>
         </section>
 
