Add fragments to the first slide

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -38,9 +38,9 @@
       <div class="slides">
         <section data-transition="zoom">
           <h1>WebSockets</h1>
-          <h3>Two-way realtime communication on the web</h3>
-          <p>
-            <small>Created by <a href="https://colincampbell.me" target="_blank">Colin Campbell</a> &amp; <a href="http://www.jordancaudill.com" target="_blank">Jordan Caudill</a></small>
+          <h3 class="fragment">Two-way realtime communication on the web</h3>
+          <p class="fragment">
+            <small>Presented by <a href="https://colincampbell.me" target="_blank">Colin Campbell</a> &amp; <a href="http://www.jordancaudill.com" target="_blank">Jordan Caudill</a></small>
           </p>
         </section>
 
