--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
   <a href="research-brief/">View the Research Brief</a>
   <a href="presentation/">View the presentation</a>
+  <a href="demo/">View the Demo</a>
 </body>
 </html>
